crates/jarl/tests/integration/snapshots/integration__comments__jarl_ignore_file_after_code_not_recognized.snap
---
source: crates/jarl/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> test.R:2:1
  |
2 | any(is.na(x))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

warning: misplaced_file_suppression
 --> test.R:3:1
  |
3 | # jarl-ignore-file any_is_na: too late
  | -------------------------------------- This comment isn't used by Jarl because `# jarl-ignore-file` must be at the top of the file.
  |
  = help: Move this comment to the beginning of the file, before any code.

warning: any_is_na
 --> test.R:4:1
  |
4 | any(is.na(y))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

Found 3 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
