crates/jarl/tests/integration/snapshots/integration__comments__jarl_ignore_missing_explanation.snap
---
source: crates/jarl/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: unexplained_suppression
 --> test.R:2:1
  |
2 | # jarl-ignore any_is_na
  | ----------------------- This comment isn't used by Jarl because it is missing an explanation.
  |
  = help: Add an explanation after the colon, e.g., `# jarl-ignore rule: <explanation>`.

warning: any_is_na
 --> test.R:3:1
  |
3 | any(is.na(x))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

warning: unexplained_suppression
 --> test.R:4:1
  |
4 | # jarl-ignore any_is_na:
  | ------------------------ This comment isn't used by Jarl because it is missing an explanation.
  |
  = help: Add an explanation after the colon, e.g., `# jarl-ignore rule: <explanation>`.

warning: any_is_na
 --> test.R:5:1
  |
5 | any(is.na(x))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

Found 4 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
