crates/jarl/tests/integration/snapshots/integration__comments__jarl_ignore_multiple_rules_with_extend_select.snap
---
source: crates/jarl/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").arg(\"--extend-select\").arg(\"assignment\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check . --extend-select assignment
